# QDbcTool

./: .gitignore  CMakeLists.txt
QDbcTool/: CMakeLists.txt
QDbcTool/Config/: dbcFormats.xml
